<?xml version="1.0"?>
<package format="2">
  <name>bag2video</name>
  <version>0.0.0</version>
  <description>The bag2video package</description>

  <maintainer email="amarburg@uw.edu">Aaron Marburg</maintainer>

  <license>BSD license</license>

  <buildtool_depend>catkin</buildtool_depend>

  <!--<depend>pybind11_module</depend>-->
  <depend>pybind11_catkin</depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>cmake_modules</depend>

  <depend>imaging_sonar_msgs</depend>
  <depend>draw_sonar</depend>
  <exec_depend>python-imageio</exec_depend>


</package>
